Minor Changes and Bug Fix in CSVExporter
Edited updateProduct and toggleListings